# ao-dashboard

./: README.md  package.json  pnpm-lock.yaml
src/: AgentNode.tsx  App.css  App.tsx  CommandCenter.tsx  EventStream.tsx  FleetFlow.tsx  FleetOverview.tsx  GroupNode.tsx  LogEventList.tsx  LogEventRow.tsx  LogFlow.tsx  LogFlowEdge.tsx  LogFlowNode.tsx  MarkdownContent.tsx  McpNode.tsx  PhaseNode.tsx  ProjectNode.tsx  ScheduleNode.tsx  TaskWorkbench.tsx  WorkflowNode.tsx  globals.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: badge.tsx  tooltip.tsx
src/lib/: logEvent.ts
