[package]
name = "ao-dashboard"
version = "0.1.0"
description = "AO Fleet Dashboard — visualize daemon streams and fleet status"
authors = ["LaunchApp"]
edition = "2021"

[lib]
name = "ao_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time"] }
dirs = "6"
tauri-plugin-store = "2"
serde_yaml = "0.9"
shlex = "1"
